--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "avataaars": "^1.2.1",
     "axios": "^0.21.1",
-    "polished": "^4.1.1",
     "react": "^17.0.1",
+    "react-avataaars": "^0.2.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
